--- a/src/index.css
+++ b/src/index.css
@@ -13,29 +13,54 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding-top: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  text-align: center;
+}
+
+h4 {
+  font-family: monospace;
+  font-weight: 400;
+  font-size: 1.25rem;
+  text-align: center;
+}
+
+h5 {
+  font-size: 1.25rem;
+  line-height: 1.1;
+  text-align: center;
+}
+
+h6 {
+  font-size: 1rem;
+  line-height: 1.1;
+  text-align: center;
+}
+
+textarea {
+  width: calc(100% - 1rem);
+  height: 200px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: none;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 
 button {
+  width: 25%;
+  min-width: 144px;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -49,18 +74,47 @@ button {
 button:hover {
   border-color: #646cff;
 }
+.loginBtn {
+  margin-top: 4rem;
+}
+.loginBtn:hover {
+  border-color: #26ea26;
+}
+.clrBtn:hover {
+  border-color: #ed2a2a;
+}
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.btnRapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.inputRapper {
+  width: calc(100% - 2rem);
+  max-width: 1080px;
+  padding-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.progressRapper {
+  padding-top: 6rem;
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
   }
   button {
     background-color: #f9f9f9;
